--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
     "react-scripts": "5.0.1",
+    "react-text-mask": "^5.5.0",
     "styled-components": "^5.3.11",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -61,6 +62,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-input-mask": "^3.0.4"
+    "@types/react-input-mask": "^3.0.4",
+    "@types/react-text-mask": "^5.4.13"
   }
 }
