--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-text-mask": "^5.5.0",
     "styled-components": "^5.3.11",
